--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,15 +15,21 @@
   </head>
   <body>
     <main>
-      <img src="./assets/logo.svg" clаss="logo" alt="meet logo" />
+      <img src="./assets/logo.svg" class="logo" alt="meet logo" />
       <div class="bubbleImg">
         <img
           src="./assets/desktop/image-hero-left.png"
-          class=""
+          class="users"
           alt="user images"
         />
-        <!-- <img src="./assets/desktop/image-hero-right.png" alt="user images" /> -->
+        <img
+          src="./assets/desktop/image-hero-right.png"
+          class="users"
+          alt="user images"
+        />
       </div>
+
+      <h1>Group Chat for Everyone</h1>
     </main>
   </body>
 </html>
