additional text and buttons styling

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,7 +11,7 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Frontend Mentor | Meet landing page</title>
+    <title>Meet landing page | MB</title>
   </head>
   <body>
     <main>
@@ -30,6 +30,14 @@
       </div>
 
       <h1>Group Chat for Everyone</h1>
+      <p>
+        Meet makes it easy to connect with others face-to-face virtually and
+        collaborate across any device.
+      </p>
+      <div class="buttons">
+        <button class="button1">Download <span>v1.3</span></button>
+        <button class="button2">What is it?</button>
+      </div>
     </main>
   </body>
 </html>
