--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -38,6 +38,11 @@
         <button class="button1">Download <span>v1.3</span></button>
         <button class="button2">What is it?</button>
       </div>
+
+      <div class="section-divider">
+        <div class="vl"></div>
+        <div class="numbered-circle">01</div>
+      </div>
     </main>
   </body>
 </html>
