description part2 + footer

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -43,6 +43,50 @@
         <div class="vl"></div>
         <div class="numbered-circle">01</div>
       </div>
+
+      <div class="user-photos">
+        <img
+          src="./assets/desktop/image-woman-in-videocall.jpg"
+          alt="image of women in a videocall"
+        />
+        <img
+          src="./assets/desktop/image-women-videochatting.jpg"
+          alt="image of a woman in a videochat"
+        />
+        <img
+          src="./assets/desktop/image-men-in-meeting.jpg"
+          alt="image of a man in a meeting"
+        />
+        <img
+          src="./assets/desktop/image-man-texting.jpg"
+          alt="image of man texting"
+        />
+      </div>
+
+      <p class="motto">Built for modern use</p>
+
+      <h2>Smarter meetings, all in one place</h2>
+      <p class="features">
+        Send messages, share files, show your screen, and record your meetings —
+        all in one workspace. Control who can join with <br />invite-only team
+        access, data encryption, and data export.
+      </p>
+
+      <div class="section-divider">
+        <div class="vl"></div>
+        <div class="numbered-circle">02</div>
+      </div>
+
+      <div class="footer">
+        <h2>Experience more together</h2>
+        <p>
+          Stay connected with reliable HD meetings and unlimited one-on-one and
+          group video sessions.
+        </p>
+        <div class="buttons">
+          <button class="button1">Download <span>v1.3</span></button>
+        </div>
+      </div>
     </main>
   </body>
 </html>
