footer bug fixes

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -71,20 +71,21 @@
         all in one workspace. Control who can join with <br />invite-only team
         access, data encryption, and data export.
       </p>
+      <div class="lastPart">
+        <div class="section-divider">
+          <div class="vl"></div>
+          <div class="numbered-circle">02</div>
+        </div>
 
-      <div class="section-divider">
-        <div class="vl"></div>
-        <div class="numbered-circle">02</div>
-      </div>
-
-      <div class="footer">
-        <h2>Experience more together</h2>
-        <p>
-          Stay connected with reliable HD meetings and unlimited one-on-one and
-          group video sessions.
-        </p>
-        <div class="buttons">
-          <button class="button1">Download <span>v1.3</span></button>
+        <div class="footer">
+          <h2>Experience more together</h2>
+          <p>
+            Stay connected with reliable HD meetings and unlimited one-on-one
+            and group video sessions.
+          </p>
+          <div class="buttons">
+            <button class="button1">Download <span>v1.3</span></button>
+          </div>
         </div>
       </div>
     </main>
