--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,21 +22,23 @@
           class="users"
           alt="user images"
         />
+
         <img
           src="./assets/desktop/image-hero-right.png"
           class="users"
           alt="user images"
         />
       </div>
-
-      <h1>Group Chat for Everyone</h1>
-      <p>
-        Meet makes it easy to connect with others face-to-face virtually and
-        collaborate across any device.
-      </p>
-      <div class="buttons">
-        <button class="button1">Download <span>v1.3</span></button>
-        <button class="button2">What is it?</button>
+      <div class="firstpart">
+        <h1>Group Chat for Everyone</h1>
+        <p class="purpose">
+          Meet makes it easy to connect with others face-to-face virtually and
+          collaborate across any device.
+        </p>
+        <div class="buttons">
+          <button class="button1">Download <span>v1.3</span></button>
+          <button class="button2">What is it?</button>
+        </div>
       </div>
 
       <div class="section-divider">
@@ -68,8 +70,10 @@
       <h2>Smarter meetings, all in one place</h2>
       <p class="features">
         Send messages, share files, show your screen, and record your meetings —
-        all in one workspace. Control who can join with <br />invite-only team
-        access, data encryption, and data export.
+        all in one workspace. Control who can join with
+        <br class="firstBreak" />invite-only team access, data<br
+          class="secondBreak"
+        />encryption, and data export.
       </p>
       <div class="lastPart">
         <div class="section-divider">
