--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,13 +19,13 @@
       <div class="bubbleImg">
         <img
           src="./assets/desktop/image-hero-left.png"
-          class="users"
+          class="users icon1"
           alt="user images"
         />
 
         <img
           src="./assets/desktop/image-hero-right.png"
-          class="users"
+          class="users icon2"
           alt="user images"
         />
       </div>
@@ -93,5 +93,10 @@
         </div>
       </div>
     </main>
+    <script
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      type="text/javascript"
+    ></script>
+    <script src="./script.js"></script>
   </body>
 </html>
