--- a/index.html
+++ b/index.html
@@ -64,17 +64,16 @@
           alt="image of man texting"
         />
       </div>
+      <div class="second_section">
+        <p class="motto">Built for modern use</p>
 
-      <p class="motto">Built for modern use</p>
-
-      <h2>Smarter meetings, all in one place</h2>
-      <p class="features">
-        Send messages, share files, show your screen, and record your meetings —
-        all in one workspace. Control who can join with
-        <br class="firstBreak" />invite-only team access, data<br
-          class="secondBreak"
-        />encryption, and data export.
-      </p>
+        <h2>Smarter meetings, all in one place</h2>
+        <p class="features">
+          Send messages, share files, show your screen, and record your meetings
+          — all in one workspace. Control who can join with invite-only team
+          access, data encryption, and data export.
+        </p>
+      </div>
       <div class="lastPart">
         <div class="section-divider">
           <div class="vl"></div>
@@ -94,7 +93,7 @@
       </div>
     </main>
     <script
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
     ></script>
     <script src="./script.js"></script>
