--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
         </div>
       </div>
     </main>
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
-      type="text/javascript"
-    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
